# py2nix

./: .editorconfig  README.md  flake.nix  py2nix.py  setup.cfg
