[metadata]
name = py2nix
version = 0.1.0
description = Generate a flake.nix for Python package using setuptools metadata
long_description = file: README.md
long_description_content_type = text/markdown
author = Paresh Adhia
author_email = padhia+github@gmail.com
url = https://github.com/padhia/py2nix
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
py_modules =
    py2nix
python_requires = >= 3.9
tests_require = pytest

[options.entry_points]
console_scripts =
    py2nix = py2nix:cli

[flake8]
ignore = W191
max-line-length = 140
